rs/crates/lite-sys/src/lib.rs


    pub fn antfly_db_batch(
        db: *mut antfly_db,
        writes: *const antfly_write_intent,
        write_count: usize,
        predicates: *const antfly_version_predicate,
        predicate_count: usize,
        timestamp_ns: u64,
        sync_level: u8,
    ) -> antfly_error_code;
    pub fn antfly_db_batch_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_begin_transaction_with_id(
        db: *mut antfly_db,
        txn_id: *const [u8; 16],
        timestamp_ns: u64,
        participants: *const antfly_slice,
        participant_count: usize,
    ) -> antfly_error_code;
    pub fn antfly_db_write_transaction(
        db: *mut antfly_db,
        txn_id: *const [u8; 16],
        writes: *const antfly_write_intent,
        write_count: usize,
        predicates: *const antfly_version_predicate,
        predicate_count: usize,
    ) -> antfly_error_code;
    pub fn antfly_db_resolve_intents(
        db: *mut antfly_db,
        txn_id: *const [u8; 16],
        status: u8,
        commit_version: u64,
    ) -> antfly_error_code;
    pub fn antfly_db_get_transaction_status(
        db: *mut antfly_db,
        txn_id: *const [u8; 16],
        out_status: *mut u8,
    ) -> antfly_error_code;
    pub fn antfly_db_get_commit_version(
        db: *mut antfly_db,
        txn_id: *const [u8; 16],
        out_commit_version: *mut u64,
    ) -> antfly_error_code;
    pub fn antfly_db_get_timestamp(
        db: *mut antfly_db,
        key: antfly_slice,
        out_timestamp: *mut u64,
    ) -> antfly_error_code;
    pub fn antfly_db_lookup_json(
        db: *mut antfly_db,
        key: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_get_raw(
        db: *mut antfly_db,
        key: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_get_schema_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_set_schema_json(
        db: *mut antfly_db,
        schema_json: antfly_slice,
    ) -> antfly_error_code;
    pub fn antfly_db_run_until_idle(db: *mut antfly_db) -> antfly_error_code;
    pub fn antfly_db_run_until_idle_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_pending_work_stats_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_replay_generated_enrichments_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_list_indexes_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_add_index_json(
        db: *mut antfly_db,
        config_json: antfly_slice,
    ) -> antfly_error_code;
    pub fn antfly_db_delete_index(
        db: *mut antfly_db,
        name: antfly_slice,
        out_deleted: *mut bool,
    ) -> antfly_error_code;
    pub fn antfly_db_list_enrichments_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_add_enrichment_json(
        db: *mut antfly_db,
        config_json: antfly_slice,
    ) -> antfly_error_code;
    pub fn antfly_db_delete_enrichment(
        db: *mut antfly_db,
        kind: antfly_slice,
        name: antfly_slice,
        out_deleted: *mut bool,
    ) -> antfly_error_code;
    pub fn antfly_db_scan_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_scan_hashes(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out_result: *mut antfly_scan_hash_result,
    ) -> antfly_error_code;
    pub fn antfly_db_stats_json(db: *mut antfly_db, out: *mut antfly_buffer) -> antfly_error_code;
    pub fn antfly_db_search_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_search_dense(
        db: *mut antfly_db,
        index_name: antfly_slice,
        vector_ptr: *const f32,
        vector_len: usize,
        k: u32,
        limit: u32,
        offset: u32,
        out_result: *mut antfly_packed_dense_search_result,
    ) -> antfly_error_code;
    pub fn antfly_db_search_dense_profile(
        db: *mut antfly_db,
        index_name: antfly_slice,
        vector_ptr: *const f32,
        vector_len: usize,
        k: u32,
        limit: u32,
        offset: u32,
        out_profile: *mut antfly_dense_search_profile,
    ) -> antfly_error_code;
    pub fn antfly_db_search_dense_wire(
        db: *mut antfly_db,
        request_buf: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_search_dense_wire_profile(
        db: *mut antfly_db,
        request_buf: antfly_slice,
        out: *mut antfly_buffer,
        out_profile: *mut antfly_dense_wire_search_profile,
    ) -> antfly_error_code;
    pub fn antfly_db_search_text_match(
        db: *mut antfly_db,
        index_name: antfly_slice,
        field: antfly_slice,
        text: antfly_slice,
        limit: u32,
        offset: u32,
        out_result: *mut antfly_dense_search_result,
    ) -> antfly_error_code;
    pub fn antfly_db_search_text_match_wire(
        db: *mut antfly_db,
        request_buf: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_search_text_term_wire(
        db: *mut antfly_db,
        request_buf: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_search_text_match_phrase_wire(
        db: *mut antfly_db,
        request_buf: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_search_hits_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out_result: *mut antfly_dense_search_result,
    ) -> antfly_error_code;
    pub fn antfly_db_aggregate_hits_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_lookup_artifact_json(
        db: *mut antfly_db,
        artifact_id_b64: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_decode_artifact_id_json(
        artifact_id_b64: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_extract_enrichments_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_compute_enrichments_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;

    pub fn antfly_db_get_edges_json(
        db: *mut antfly_db,
        index_name: antfly_slice,
        key: antfly_slice,
        edge_type: antfly_slice,
        direction: u8,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_traverse_edges_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_execute_graph_queries_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_get_neighbors_json(
        db: *mut antfly_db,
        index_name: antfly_slice,
        key: antfly_slice,
        edge_type: antfly_slice,
        direction: u8,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_find_shortest_path_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_find_k_shortest_paths_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_db_match_pattern_json(
        db: *mut antfly_db,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;

    // -- Embedded inference without a database --------------------------

    pub fn antfly_inference_options_size() -> u32;
    pub fn antfly_inference_options_init(
        options: *mut antfly_inference_options,
    ) -> antfly_error_code;
    /// `options` may be NULL for defaults.
    pub fn antfly_inference_open(
        options: *const antfly_inference_options,
        out_inference: *mut *mut antfly_inference,
    ) -> antfly_error_code;
    pub fn antfly_inference_close(inference: *mut antfly_inference);

    pub fn antfly_inference_embed_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_rerank_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_chunk_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_generate_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    /// Streams a generate request (the same body as
    /// `antfly_inference_generate_json`; `"stream"` is set for the caller).
    /// `on_chunk` is called on the calling thread for each chunk as the
    /// model produces tokens. Returns `ANTFLY_OK` once generation finishes,
    /// or `ANTFLY_CANCELLED` when `on_chunk` returned `false`. A request
    /// rejected before generation starts (such as a missing model) fails
    /// like `antfly_inference_generate_json`, with the JSON error in `out`;
    /// a failure mid-stream returns `ANTFLY_INTERNAL` with
    /// `{"error": "STREAM_FAILED", ...}`.
    pub fn antfly_inference_generate_stream_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        on_chunk: antfly_inference_stream_fn,
        chunk_context: *mut c_void,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    /// Up to 128 non-streaming generate requests in one call; per-item
    /// failures are reported in the response.
    pub fn antfly_inference_generate_batch_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_rewrite_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_extract_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_read_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_inference_transcribe_json(
        inference: *mut antfly_inference,
        request_json: antfly_slice,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    /// The installed models, as returned by `GET /ai/v1/models`.
    pub fn antfly_inference_list_models_json(
        inference: *mut antfly_inference,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
